# ALSE_GRUPO_1

Auntenticacion/: Auntenticacion.pro
Autenticacion/: Autenticacion.pro  CMakeLists.txt  datos.cpp  datos.ui  db_local  db_local.cpp  db_local.h  db_local.sqbpro  mainwindow.cpp  mainwindow.h  mainwindow.ui  registro.h  registro.ui
Autenticacion/Datos/: Datos.pro  main.cpp
Autenticacion/Registro/: Registro.pro  main.cpp  registro.ui
Autenticacion/build-Registro-Desktop-Debug/: Makefile  Registro  moc_registro.cpp  ui_registro.h
MeteoEci/: CMakeLists.txt  Doxyfile  MeteoEci.pro  datos.h  db_local.cpp  db_local.h  main.cpp  meteoeci_gui.cpp  meteoeci_gui.h  meteoeci_gui.ui  registro.cpp  registro.h  registro.ui  sensor.h  sensores.db
Registro/: Registro.pro  main.cpp  resgistro.cpp  resgistro.h  resgistro.ui
build-Autenticacion-Desktop-Default/: CMakeCache.txt  Makefile  Meteo  Meteo.cbp  cmake_install.cmake
build-Autenticacion-Desktop-Default/Meteo_autogen/: mocs_compilation.cpp
build-Autenticacion-Desktop-Default/Meteo_autogen/EWIEGA46WW/: moc_datos.cpp  moc_mainwindow.cpp  moc_registro.cpp
build-Autenticacion-Desktop-Default/Meteo_autogen/include/: ui_datos.h  ui_mainwindow.h  ui_registro.h
build-Registro-Desktop-Debug/: Makefile  Registro  moc_resgistro.cpp  ui_resgistro.h
